--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /resources/_gen/
 /assets/jsconfig.json
 .hugo_build.lock
+
+./static/files/cv/cv.aux
+./static/files/cv/cv.bcf
+./static/files/cv/cv.log
