start migrating to v0.140

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,12 @@
+# The base URL for your website. 
+# This is typically the domain where your site will be hosted. 
+# Use "/" if hosting locally or configuring later for deployment.
 baseurl = "/"
+
+# Enable relative URLs to avoid absolute paths in links. 
+# This is useful for testing locally or deploying to non-root domains.
 relativeURLs = true
+
+# Use "ugly" URLs for pages (e.g., "/about.html" instead of "/about/").
+# This can be useful for certain server setups or preferences.
 uglyURLs = true
-# googleAnalytics = 'UA-36911186-4'
