--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -29,10 +29,10 @@ module:
 ############################
 ## ADVANCED
 ############################
-
 enableGitInfo: false
 summaryLength: 30
-paginate: 10
+pagination:
+  pagerSize: 10
 enableEmoji: true
 enableRobotsTXT: true
 footnotereturnlinkcontents: <sup>^</sup>
