--- a/data/fonts/custom_font.toml
+++ b/data/fonts/custom_font.toml
@@ -1,11 +1,8 @@
 # Font style metadata
-name = "My custom font"
-
-# Optional Google font URL
-google_fonts = "family=Roboto+Mono&family=Source+Sans+Pro:wght@200;300;400;700"
+name = "GitHub-like Font Style"
 
 # Font families
-heading_font = "Source Sans Pro"
-body_font = "Source Sans Pro"
-nav_font = "Source Sans Pro"
-mono_font = "Roboto Mono"
+heading_font = "-apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif"
+body_font = "-apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif"
+nav_font = "-apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif"
+mono_font = "'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace"
